NetworkManager-strongswan-1.1.2
-------------------------------

- Additionally look for libnm-glib[-vpn] pkgconfig packages during configure
- Tooltips are translatable
- Update german translations

NetworkManager-strongswan-1.1.1
-------------------------------

- Implemented save_secrets(), fixes crash when saving connections

NetworkManager-strongswan-1.1.0
-------------------------------

- updated to NetworkManager 7.1 API

- requires >= strongswan-4.1.13


NetworkManager-strongswan-1.0.0
-------------------------------

- First release