@@ -1,3 +1,8 @@
+NetworkManager-strongswan-1.2.0
+-------------------------------
+
+- Added Smartcard support
+
 NetworkManager-strongswan-1.1.2
 -------------------------------
 
